<resources>
    <string name="app_name">Apenibeer</string>
    <string name="btn_text">BTN</string>
    <string name="asdfetrt_rt_gfigu">asdfetrt rt gfigu@@</string>
    <string name="rame_chawere">rame chawere</string>
    <string name="_12121212121">12121212121</string>
    <string name="ludis_shetana">ლუდის შეტანა</string>
    <string name="nakleboba"><![CDATA[<]]></string>
    <string name="metoba"><![CDATA[>]]></string>
    <string name="pliusi">+</string>
    <string name="minusi">-</string>
    <string name="litraji">ლიტრაჟი</string>
    <string name="ludis_saxeoba">ლუდის სახეობა</string>
    <string name="litris_fasi">ლიტრის ფასი</string>
    <string name="kasrebis_raodenoba">კასრების რაოდ.</string>
    <string name="search">search</string>
    <string name="done">done</string>
</resources>
